--- a/templates/default/invoice/invoiceedit.html
+++ b/templates/default/invoice/invoiceedit.html
@@ -12,6 +12,8 @@
 			if (document.setcustomer.customer.value != 0)
 				document.setcustomer.customerid.value = document.setcustomer.customer.value;
 
+		$('#ingross').prop('disabled', false);
+		$('#innet').prop('disabled', false);
 		document.setcustomer.submit();
 	}
 
@@ -137,6 +139,21 @@
 			</label>
 		</TD>
 	</TR>
+	<tr>
+		<td class="bold nobr">
+			{trans("Accounting")}
+		</td>
+		<td class="nobr">
+			<label>
+				<input type="radio" id="ingross" name="invoice[netflag]" value="0" {if !$invoice.netflag} checked{/if} {if $contents} disabled{/if}>
+				{trans("in gross")}
+			</label>
+			<label>
+				<input type="radio" id="innet" name="invoice[netflag]" value="1" {if $invoice.netflag} checked{/if} {if $contents} disabled{/if}>
+				{trans("in net")}
+			</label>
+		</td>
+	</tr>
 	<TR>
 		<TD class="bold nobr">
 			{trans("Customer:")}
