devel: add changelog entry, strings regeneration, small visual change in invoice list

--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -195,9 +195,9 @@
 		</TD>
 		<TD class="text-right nobr">
 			{if $invoice.netflag}
-				{trans('in net')}
+				{trans('net')}
 			{else}
-				{trans('in gross')}
+				{trans('gross')}
 			{/if}
 		</TD>
 		<TD>
