devel: change text 'in gross' to 'gross' in some places

--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -409,9 +409,9 @@
 								{if $a.tariffid || $a.liabilityid}
 									{$a.payday}
 									{if $a.netflag}
-										&nbsp;({trans('in net')})
+										&nbsp;({trans('net')})
 									{else}
-										&nbsp;({trans('in gross')})
+										&nbsp;({trans('gross')})
 									{/if}
 									{if $a.backwardperiod}
 										&nbsp;{icon name="lms-ui-icon-previous" tip="<!assignment>backward"}
