--- a/templates/default/invoice/invoicenotemodify.html
+++ b/templates/default/invoice/invoicenotemodify.html
@@ -207,11 +207,11 @@
 		<td class="nobr">
 			<label>
 				<input type="radio" id="ingross" name="cnote[netflag]" value="0" {if !$cnote.netflag} checked{/if} disabled>
-				{trans("in gross")}
+				{trans("gross")}
 			</label>
 			<label>
 				<input type="radio" id="innet" name="cnote[netflag]" value="1" {if $cnote.netflag} checked{/if} disabled>
-				{trans("in net")}
+				{trans("net")}
 			</label>
 		</td>
 	</tr>
