improvement: changed net/gross icons to simple text

--- a/templates/default/tariff/tarifflist.html
+++ b/templates/default/tariff/tarifflist.html
@@ -187,9 +187,9 @@
 		<td class="text-center">
 			{$tariff.tax}<br>
 			{if $tariff.netflag}
-				{icon name="net-to-gross" tip="Billing according to the net price"}
+				{trans("net")}
 			{else}
-				{icon name="gross-to-net" tip="Billing according to the gross price"}
+				{trans("gross")}
 			{/if}
 		</td>
 		<TD class="text-right nobr">
